# gbemu

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  cmake_macos.yml  cmake_ubuntu.yml  cmake_windows.yml
include/: cpu.h  gpu.h  rom.h
src/: cpu.c  gpu.c  main.c  rom.c
